--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -11,8 +10,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="/src/index.js"></script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="../src/index.js"></script>
     <div id="root"></div>
   </body>
 </html>
