--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
