design, links, responsive

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="" content="" />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
-    />
+    /> -->
+    <link rel="stylesheet" href="https://use.typekit.net/lwt0kbs.css">
     <title>Marius's Portfolio</title>
   </head>
   <body>
