--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     /> -->
-    <link rel="stylesheet" href="https://use.typekit.net/lwt0kbs.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lwt0kbs.css" />
     <title>Marius's Portfolio</title>
   </head>
   <body>
